# tgonzalez_embedded_2016

./: README.md
assignment_1/memcheck/: README.txt  configure.ac
assignment_1/memcheck/lib/: Makefile.am  libmemcheck.c
assignment_1/memcheck/src/: Makefile.am  hw  hw.c  leaky  log.txt  memcheck.c
assignment_1/valgrind/: leaks.txt  log.txt  valgrind.txt
assignment_2/dbugger/: README.txt  configure.ac
assignment_2/dbugger/src/: Makefile.am  dbugger.c
assignment_2/gdb/: gdb.txt
assignment_3/conv/: README.txt  configure.ac
assignment_3/conv/doc/: Doxyfile.in  Makefile.am
assignment_3/conv/src/: Makefile.am  conv.c  documentation.h
assignment_3/results/: analysis_after.txt  analysis_before.txt  times.txt
assignment_4/bare_metal/: bootlog.txt  instructions.txt  run.txt  video.txt
assignment_4/bare_metal/app/: test.c
assignment_4/full_boot/: bootlog.txt  instructions.txt  run.txt  video.txt
assignment_4/full_boot/images/: zImage
